assets/main.css
/* Common elements */
body {
    color: #000;
    font-family: "Courier New", Courier, monospace;
    font-size: 17px;
    line-height: 20px;
    padding: 27px 27px 27px 27px;
    text-align: center;
}

a {
    text-decoration: none;
}

a:link {
    color: #830455;
}

a:visited {
    color: #999;
}

a:hover {
    color: #000;
}

/* Base - baseof.html */
.home {
    margin: 0px auto;
    width: 100%;
    padding: 0px 0px;
    text-align: left;
}

/* Main menu - menu.html */
.hr-menu {
    clear: both;
    display: block;
    margin: 0px 0px 45px;
    overflow: hidden;
    visibility: hidden;
}

.div-menu {
    margin: 0px auto;
    width: 100%;
    padding: 0px 0px;
    text-align: left;
}

.ul-menu {
    left: 18px;
    list-style: none;
    margin: 10px 0px 0px 20px;
    padding: 0px;
    position: absolute;
    text-overflow: ellipsis;
    top: 225px;
    width: 25%;
}

/* About - single.html */
.div-about {
    margin: -257px 10px 0 0;
    position: relative;
    left: 200px;
    font-size: 13px;
    max-width: 75%;
}

@media (min-width: 600px) {
    .div-about {
        left: 300px;
        font-size: 17px;
    }
}

/* 404.html */
.div-404 {
    margin: -257px 20px 0 0;
    position: relative;
    left: 300px;
}
.div-404 a {
    color: #830455;
    font-weight: 200;
}

